shows field, urls, submit btn onclick

--- a/popup.html
+++ b/popup.html
@@ -37,15 +37,18 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">Tabby</a>
-        <button type="button" class="btn btn-default navbar-brand" id="create">Create ME!</button>
+        <button type="button" class="btn btn-default navbar-brand" id="create">Create Group</button>
       </div>
     </nav>
+
+     <!--  <input type = "text" class = "form-control" id = "title" placeholder = "group title" style="display: none;"> -->
+  
    
-    <input type = "text" class = "form-control" id = "title" placeholder = "group title" style="display: none;">
-   
-    <div class="wrapper">
+    <div id="wrapper">
       <div id="content">
+        <input type = "text" class = "form-control" id = "title" placeholder = "group title" style="display: none;">
       </div>
+        <button style="display: none;" type="button" class="btn btn-default btn-sm" id="submit" >Submit</button>
     </div>
       <!-- <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
