--- a/popup.html
+++ b/popup.html
@@ -1,25 +1,4 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Tabbing</title>
-  <link rel="stylesheet" type="text/css" href="popup.css">
-</head>
-<body>
-  
-  <div class="wrapper">
-    <div id="content">
-      <button id="create">Create ME!</button>
-      <button id="list">Create List</button>
-    </div>
-  </div>
-  <footer>
-    <script src="popup.js"></script>
-  </footer>
-
-</body>
-</html> -->
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
       <meta charset="utf-8">
@@ -40,29 +19,46 @@
         <button type="button" class="btn btn-default navbar-brand" id="create">Create Group</button>
       </div>
     </nav>
-
-     <!--  <input type = "text" class = "form-control" id = "title" placeholder = "group title" style="display: none;"> -->
-  
    
-    <div id="wrapper">
+    <div id="wrapper" style="display: block;">
       <div id="content">
         <input type = "text" class = "form-control" id = "title" placeholder = "group title" style="display: none;">
       </div>
         <button style="display: none;" type="button" class="btn btn-default btn-sm" id="submit" >Submit</button>
     </div>
-      <!-- <div class="collapse navbar-collapse navbar-ex1-collapse">
+
+    <div id="container">
+    </div>
+
+    <div class="panel-group" id="accordion" style="display: none;"> <!-- accordion -->
+      <div class="panel panel-primary">
+        <div class="panel-heading"> <!-- panel-heading -->
+          <h4 class="panel-title">
+            <a id="collapsible" data-toggle="collapse" data-parent="#accordion" href="#accordionOne"> <!-- Group Title --> </a>
+          </h4>
+        </div>
+          <!-- panel body -->
+        <div id="accordionOne" class="panel-collapse collapse in">
+          <div class="panel-body">
+            <!-- list of url's added to group -->
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <footer>
+    <script src="popup.js"></script>
+  </footer> 
+
+  </body>
+</html>
+
+
+
+
+
+   <!-- <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
-          <li class="active">
-            <a href="#">Link</a>
-          </li>
-          <li>
-            <a href="#">Link</a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="glyphicon glyphicon-thumbs-up"></i>
-            </a>
-          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -84,11 +80,4 @@
             </ul>
           </li>
         </ul>
-      </div> -->
- <!--    </nav> -->
-
-  <footer>
-    <script src="popup.js"></script>
-  </footer>  
-  </body>
-</html>
+      </div>
