show one url in created group

--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
    
     <div id="wrapper" style="display: block;">
       <div id="content">
-        <input type = "text" class = "form-control" id = "title" placeholder = "group title" style="display: none;">
+        <input type= "text" class= "form-control" id= "title" placeholder = "group title" style="display: none;">
       </div>
         <button style="display: none;" type="button" class="btn btn-default btn-sm" id="submit" >Submit</button>
     </div>
@@ -38,7 +38,7 @@
           </h4>
         </div>
           <!-- panel body -->
-        <div id="accordionOne" class="panel-collapse collapse in">
+        <div id="accordionOne" class="panel-collapse collapse">
           <div class="panel-body">
             <!-- list of url's added to group -->
           </div>
@@ -52,32 +52,3 @@
 
   </body>
 </html>
-
-
-
-
-
-   <!-- <div class="collapse navbar-collapse navbar-ex1-collapse">
-        <ul class="nav navbar-nav">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="#">Action</a>
-              </li>
-              <li>
-                <a href="#">Another action</a>
-              </li>
-              <li>
-                <a href="#">Something else here</a>
-              </li>
-              <li>
-                <a href="#">Separated link</a>
-              </li>
-              <li>
-                <a href="#">One more separated link</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
