multiple panels onload

--- a/popup.html
+++ b/popup.html
@@ -30,7 +30,7 @@
     <div id="container">
     </div>
 
-    <div class="panel-group" id="accordion" style="display: none;"> <!-- accordion -->
+    <div class="panel-group" id="accordion"> <!-- accordion -->
       <div class="panel panel-primary">
         <div class="panel-heading"> <!-- panel-heading -->
           <h4 class="panel-title">
